tests/errors/undefined_variable.b
fn main() {
    int x = y;
}
